fix[stylesIssue]: Fix issue of styles in production mode in production some styles were being overwritten by MUI, to solve this I had to use StyledEngineProvier component to wrap everyting in _app.tsx this component is provided by MUI in the documentation under CSS injection order

--- a/src/components/organisms/dashboard/dashboard.module.css
+++ b/src/components/organisms/dashboard/dashboard.module.css
@@ -1,7 +1,6 @@
 .dashboard {
   display: flex;
   height: inherit;
-  height: inherit;
   justify-content: center;
   align-items: center;
 }
